# acts

./: CMakeLists.txt  vscode-workspace.code-workspace
Core/include/Acts/TrackFitting/: Chi22Fitter.hpp  Chi2Fitter.hpp  GainMatrixUpdater.hpp
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/Digitization/src/: DigitizationOptions.cpp
Examples/Algorithms/TrackFitting/include/ActsExamples/TrackFitting/: TrackFittingAlgorithm.hpp
Examples/Algorithms/TrackFitting/src/: TrackFittingAlgorithm-copy_RRRR.cpp
Examples/Algorithms/TrackFittingChi2/include/ActsExamples/TrackFittingChi2/: TrackFittingChi2Algorithm.hpp
Examples/Algorithms/TrackFittingChi2/src/: TrackFittingChi2Algorithm.cpp  TrackFittingChi2AlgorithmFunction.cpp  TrackFittingChi2Options.cpp
Examples/Framework/src/Framework/: Sequencer.cpp
Examples/Run/Common/src/: GeometryExampleBase.cpp
Examples/Run/Reconstruction/: CMakeLists.txt
Examples/Run/Reconstruction/Common/: CMakeLists.txt  RecChi2Tracks copy.cpp  RecChi2Tracks.cpp  RecChi2Tracks.hpp
Plugins/: CMakeLists.txt
Plugins/Minuit2/: CMakeLists.txt
Plugins/Minuit2/include/Acts/Plugins/Minuit2/: Minuit2Minimizer.hpp
Plugins/Minuit2/src/: Minuit2Minimizer.cpp
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Core/TrackFitting/: CMakeLists.txt  Chi2FitterTests.cpp
