option (FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
if (${FORCE_COLORED_OUTPUT})
    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
       add_compile_options (-fdiagnostics-color=always)
    elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
       add_compile_options (-fcolor-diagnostics)
    endif ()
endif ()

add_unittest(GainMatrixSmoother GainMatrixSmootherTests.cpp)
add_unittest(GainMatrixUpdater GainMatrixUpdaterTests.cpp)
add_unittest(KalmanFitter KalmanFitterTests.cpp)
add_unittest(Chi2Fitter Chi2FitterTests.cpp)
